--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Didrik Forsberg</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="http://www.time-dots.com/skin/frontend/default/pagayo-theme-003/images/flags/NO.png">
   </head>
   <body>
-    <h1>Didrik Forsberg</h1> 
+    <h1>Didrik Forsberg</h1>
+    <a href="https://mysterious-forest-15504.herokuapp.com/"><h3>Project 1</h3></a>
+    <a href="https://enigmatic-refuge-29546.herokuapp.com/"><h3>Project 2</h3></a>
+    <a href="https://feelgood.herokuapp.com/"><h3>Project 3</h3></a>
+    <a href="https://fiveaside-ga.herokuapp.com/"><h3>Project 4</h3></a>
   </body>
 </html>
