--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="http://www.time-dots.com/skin/frontend/default/pagayo-theme-003/images/flags/NO.png">
   </head>
   <body>
-    <h1>Didrik Forsberg</h1>
+    <h1>Jonathan er lø støgg i trynet da sverg</h1>
     <a href="https://mysterious-forest-15504.herokuapp.com/"><h3>Project 1</h3></a>
     <a href="https://enigmatic-refuge-29546.herokuapp.com/"><h3>Project 2</h3></a>
     <a href="https://feelgood.herokuapp.com/"><h3>Project 3</h3></a>
