--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <div class="wrapper">
     <span class="menu"></span>
 
-    <div class="title">
+    <!-- <div class="title">
       <h1>Click the burger icon to see the menu !</h1>
-    </div>
+    </div> -->
 
     <div class="overlay">
       <ul>
